--- a/MyApplication/app/src/main/res/layout/item_team.xml
+++ b/MyApplication/app/src/main/res/layout/item_team.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="180px"
+        android:layout_height="110dp"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
